Adding community  funcitonalities
- Leaving community
- Creating a post
- Get a post
